Fancy home page 2

--- a/overrides/home.html
+++ b/overrides/home.html
@@ -126,7 +126,7 @@
     .mdx-hero__content a {
       color: white !important;
     }
-    /* Second hero buttons only */
+    /* Second hero button only */
   .mdx-hero__content .md-button {
       background-color: black; /* button background */
       color: white; /* text color */
@@ -140,6 +140,7 @@
       border-color: lightsteelblue; /* hover border */
   }
 
+    /* First hero button only */
     .mdx-hero__content .md-button.md-button--primary {
       background-color: forestgreen; /* button background */
       color: white; /* text color */
